tests/gen-derivation/inputvalidation/unexpected-gen-target/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genOfConcreteGen. Error during reflection: Target type's argument must be a variable name

ValidateInput:16:55--16:71
 12 |   MkY : Y Int String
 13 | 
 14 | --- Gen CanBeEmptyStatic of strange things ---
 15 | 
 16 | genOfConcreteGen : Fuel -> Gen CanBeEmptyStatic $ Gen CanBeEmptyStatic X
                                                            ^^^^^^^^^^^^^^^^

Error: While processing right hand side of genOfLazies. Error during reflection: Target type is not a simple name

ValidateInput:19:46--19:52
 15 | 
 16 | genOfConcreteGen : Fuel -> Gen CanBeEmptyStatic $ Gen CanBeEmptyStatic X
 17 | genOfConcreteGen = deriveGen
 18 | 
 19 | genOfLazies : Fuel -> Gen CanBeEmptyStatic $ Lazy X
                                                   ^^^^^^

Error: While processing right hand side of genOfInfs. Error during reflection: Target type is not a simple name

ValidateInput:22:44--22:49
 18 | 
 19 | genOfLazies : Fuel -> Gen CanBeEmptyStatic $ Lazy X
 20 | genOfLazies = deriveGen
 21 | 
 22 | genOfInfs : Fuel -> Gen CanBeEmptyStatic $ Inf X
                                                 ^^^^^

Error: While processing right hand side of genOfDPair. Error during reflection: The result type of the generator function must be of type "`Gen CanBeEmptyStatic` of desired result"

ValidateInput:25:25--25:27
 21 | 
 22 | genOfInfs : Fuel -> Gen CanBeEmptyStatic $ Inf X
 23 | genOfInfs = deriveGen
 24 | 
 25 | genOfDPair : Fuel -> (a ** b ** Gen CanBeEmptyStatic $ Y a b)
                              ^^

Error: While processing right hand side of genOfPair. Error during reflection: The result type of the generator function must be of type "`Gen CanBeEmptyStatic` of desired result"

ValidateInput:28:39--28:68
 24 | 
 25 | genOfDPair : Fuel -> (a ** b ** Gen CanBeEmptyStatic $ Y a b)
 26 | genOfDPair = deriveGen
 27 | 
 28 | genOfPair : Fuel -> (a, b : Type) -> (Gen CanBeEmptyStatic (Y a b), Gen CanBeEmptyStatic (Y a b))
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genOfPair'. Error during reflection: The result type of the generator function must be of type "`Gen CanBeEmptyStatic` of desired result"

ValidateInput:31:40--31:69
 27 | 
 28 | genOfPair : Fuel -> (a, b : Type) -> (Gen CanBeEmptyStatic (Y a b), Gen CanBeEmptyStatic (Y a b))
 29 | genOfPair = deriveGen
 30 | 
 31 | genOfPair' : Fuel -> (a, b : Type) -> (Gen CanBeEmptyStatic (Y a b), Gen CanBeEmptyStatic X)
                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genOfFuns_pur. Error during reflection: Target type is not a simple name

ValidateInput:34:49--34:50
 30 | 
 31 | genOfPair' : Fuel -> (a, b : Type) -> (Gen CanBeEmptyStatic (Y a b), Gen CanBeEmptyStatic X)
 32 | genOfPair' = deriveGen
 33 | 
 34 | genOfFuns_pur : Fuel -> Gen CanBeEmptyStatic $ (a : Type) -> (b : Type) -> Y a b
                                                      ^

Error: While processing right hand side of genOfFuns_pur0s. Error during reflection: Target type is not a simple name

ValidateInput:37:53--37:54
 33 | 
 34 | genOfFuns_pur : Fuel -> Gen CanBeEmptyStatic $ (a : Type) -> (b : Type) -> Y a b
 35 | genOfFuns_pur = deriveGen
 36 | 
 37 | genOfFuns_pur0s : Fuel -> Gen CanBeEmptyStatic $ (0 a : Type) -> (0 b : Type) -> Y a b
                                                          ^

Error: While processing right hand side of genOfFuns_pur1s. Error during reflection: Target type is not a simple name

ValidateInput:40:53--40:54
 36 | 
 37 | genOfFuns_pur0s : Fuel -> Gen CanBeEmptyStatic $ (0 a : Type) -> (0 b : Type) -> Y a b
 38 | genOfFuns_pur0s = deriveGen
 39 | 
 40 | genOfFuns_pur1s : Fuel -> Gen CanBeEmptyStatic $ (1 a : Type) -> (1 b : Type) -> Y a b
                                                          ^

Error: While processing right hand side of genOfFuns_ins_pair. Error during reflection: Target type is not a simple name

ValidateInput:43:59--43:60
 39 | 
 40 | genOfFuns_pur1s : Fuel -> Gen CanBeEmptyStatic $ (1 a : Type) -> (1 b : Type) -> Y a b
 41 | genOfFuns_pur1s = deriveGen
 42 | 
 43 | genOfFuns_ins_pair : Fuel -> Gen CanBeEmptyStatic (a ** ((b : Type) -> Y a b))
                                                                ^

Error: While processing right hand side of genOfFuns_ins_pair0. Error during reflection: Target type is not a simple name

ValidateInput:46:62--46:63
 42 | 
 43 | genOfFuns_ins_pair : Fuel -> Gen CanBeEmptyStatic (a ** ((b : Type) -> Y a b))
 44 | genOfFuns_ins_pair = deriveGen
 45 | 
 46 | genOfFuns_ins_pair0 : Fuel -> Gen CanBeEmptyStatic (a ** ((0 b : Type) -> Y a b))
                                                                   ^

Error: While processing right hand side of genOfFuns_ins_pair1. Error during reflection: Target type is not a simple name

ValidateInput:49:62--49:63
 45 | 
 46 | genOfFuns_ins_pair0 : Fuel -> Gen CanBeEmptyStatic (a ** ((0 b : Type) -> Y a b))
 47 | genOfFuns_ins_pair0 = deriveGen
 48 | 
 49 | genOfFuns_ins_pair1 : Fuel -> Gen CanBeEmptyStatic (a ** ((1 b : Type) -> Y a b))
                                                                   ^

Error: While processing right hand side of genOfFuns_out_pair. Error during reflection: Target type is not a simple name

ValidateInput:52:54--52:55
 48 | 
 49 | genOfFuns_ins_pair1 : Fuel -> Gen CanBeEmptyStatic (a ** ((1 b : Type) -> Y a b))
 50 | genOfFuns_ins_pair1 = deriveGen
 51 | 
 52 | genOfFuns_out_pair : Fuel -> Gen CanBeEmptyStatic $ (b : Type) -> (a ** Y a b)
                                                           ^

Error: While processing right hand side of genOfFuns_out_pair0. Error during reflection: Target type is not a simple name

ValidateInput:55:57--55:58
 51 | 
 52 | genOfFuns_out_pair : Fuel -> Gen CanBeEmptyStatic $ (b : Type) -> (a ** Y a b)
 53 | genOfFuns_out_pair = deriveGen
 54 | 
 55 | genOfFuns_out_pair0 : Fuel -> Gen CanBeEmptyStatic $ (0 b : Type) -> (a ** Y a b)
                                                              ^

Error: While processing right hand side of genOfFuns_out_pair1. Error during reflection: Target type is not a simple name

ValidateInput:58:57--58:58
 54 | 
 55 | genOfFuns_out_pair0 : Fuel -> Gen CanBeEmptyStatic $ (0 b : Type) -> (a ** Y a b)
 56 | genOfFuns_out_pair0 = deriveGen
 57 | 
 58 | genOfFuns_out_pair1 : Fuel -> Gen CanBeEmptyStatic $ (1 b : Type) -> (a ** Y a b)
                                                              ^

Error: While processing right hand side of nonEmptyGen. Error during reflection: Only `GenBeEmptyStatic` variant of generator is supported, `Test.DepTyCheck.Gen.Emptiness.NonEmpty` is given

ValidateInput:61:23--61:26
 57 | 
 58 | genOfFuns_out_pair1 : Fuel -> Gen CanBeEmptyStatic $ (1 b : Type) -> (a ** Y a b)
 59 | genOfFuns_out_pair1 = deriveGen
 60 | 
 61 | nonEmptyGen : Fuel -> Gen NonEmpty X
                            ^^^

